src/test/deca/etapeB/invalid/doubledecl.res
./src/test/deca/etapeB/invalid/doubledecl.deca:8:4: this variable is already declared
